--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,6 @@
 
     <title>Login</title>
 </head>
-
 <body>
     <div id="login">
         <h3 class="text-center text-white pt-5">Welcome!</h3>
@@ -28,6 +27,12 @@
                             method="post"
                         >
                             <h3 class="text-center text-info">Login</h3>
+                            <% if(typeof msg !== 'undefined'){ %>
+                            <div class="alert alert-danger" role="alert">
+                                <%= msg %>
+                            </div>
+                            <% } %>
+
                             <div class="form-group">
                                 <label for="username" class="text-info"
                                     >Username:</label
