--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -24,13 +24,16 @@
                         <form
                             id="login-form"
                             class="form"
-                            action="/register"
+                            action="/registration"
                             method="post"
                         >
                             <h3 class="text-center text-info">Registration</h3>
-                            <!-- <div class="alert alert-danger" role="alert">
-                                Message!
-                            </div> -->
+                            <% if(typeof msg !== 'undefined'){ %>
+                            <div class="alert alert-danger" role="alert">
+                                <%= msg %>
+                            </div>
+                            <% } %>
+
                             <div class="form-group">
                                 <label for="username" class="text-info"
                                     >Username:</label
