--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,13 +63,8 @@
                                     value="Sign in"
                                 />
                             </div>
-                            <div id="register-link" class="">
-                                <a href="/" class="text-info float-left"
-                                    >Back</a
-                                >
-                                <a
-                                    href="/registration"
-                                    class="text-info float-right"
+                            <div id="register-link" class="text-center">
+                                <a href="/registration" class="text-info"
                                     >Register here</a
                                 >
                                 <div class="clearfix"></div>
